.kubernetes/smeshtaj-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smeshtaj
  labels:
    name: smeshtaj
