.kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: smeshtaj
spec:
  selector:
    app: backend
  ports:
    -  port: 8080
       targetPort: 8080
  type: ClusterIP
