.kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: smeshtaj
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
